Erro ajustado botão cadastro e foi utilizado o hint

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -31,9 +31,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="76dp"
         android:ems="10"
+        android:hint="Nome da Série"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:text="Nome da Série"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
@@ -50,9 +50,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:ems="10"
+        android:hint="Temporada"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:text="Temporada"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -69,9 +69,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:ems="10"
+        android:hint="Episódio"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:text="Episódio"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -82,7 +82,7 @@
         android:id="@+id/btnconfirmar"
         android:layout_width="141dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
